--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name ="primary">#1C2E46</color>
+    <color name ="primary">#595959</color>
     <color name ="primary_dark">#142232</color>
     <color name ="primary_text">#212121</color>
     <color name ="secondary_text">#757575</color>
@@ -9,4 +9,12 @@
     <color name ="icon_background">#20FFFFFF</color>
     <color name ="error">#B00020</color>
     <color name ="received_message_background">#090D16</color>
+    <color name ="green">#008000</color>
+    <color name ="black">#000000</color>
+    <color name ="graywhite">#D9D9D9</color>
+    <color name ="eee">#e8e8e8</color>
+    <color name ="five">#595959</color>
+    <color name ="purple_200">#FFBB86FC</color>
+    <color name ="purple_500">#FF6200EE</color>
+    <color name ="purple_700">#FF3700B3</color>
 </resources>
